[gd_scene load_steps=26 format=3 uid="uid://s0de61sea5ob"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_1m1ro"]
[ext_resource type="Texture2D" uid="uid://dqtxgjcbv8s21" path="res://Assets/Art/Particles/White_Circle.svg.png" id="2_72tof"]
[ext_resource type="Texture2D" uid="uid://cabv1lbcvhkpm" path="res://Assets/Art/Player/DownIdle.png" id="3_5gmot"]
[ext_resource type="Texture2D" uid="uid://dutvvxcjonikj" path="res://Assets/Art/Player/Leftwalk1.png" id="4_8eynm"]
[ext_resource type="Texture2D" uid="uid://bi8m58nykmovy" path="res://Assets/Art/Player/Leftwalk2.png" id="5_ply88"]
[ext_resource type="Texture2D" uid="uid://cvjml0quvgwou" path="res://Assets/Art/Player/Leftwalk3.png" id="6_qhq2r"]
[ext_resource type="Texture2D" uid="uid://bpiisuiv2r6dd" path="res://Assets/Art/Player/Rightwalk1.png" id="7_rdm0a"]
[ext_resource type="Texture2D" uid="uid://bks8t4ipwexmr" path="res://Assets/Art/Player/Rightwalk2.png" id="8_w6pac"]
[ext_resource type="Texture2D" uid="uid://etl0b8qyonqk" path="res://Assets/Art/Particles/RunParticle.png" id="9_l71w0"]
[ext_resource type="Texture2D" uid="uid://bkq2p7k6wv1j8" path="res://Assets/Art/Player/Rightwalk3.png" id="9_ph67t"]
[ext_resource type="Theme" uid="uid://djh84cp52xgqd" path="res://Resources/theme.tres" id="11_ksnql"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7425s"]
size = Vector2(60, 200)

[sub_resource type="Animation" id="Animation_t6u8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -41)]
}

[sub_resource type="Animation" id="Animation_c6a8w"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5gmot")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, -48)]
}

[sub_resource type="Animation" id="Animation_7l2fg"]
resource_name = "walk_left"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("4_8eynm"), ExtResource("5_ply88"), ExtResource("6_qhq2r"), ExtResource("5_ply88")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"step"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, -41)]
}

[sub_resource type="Animation" id="Animation_n33bk"]
resource_name = "walk_right"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_rdm0a"), ExtResource("8_w6pac"), ExtResource("9_ph67t"), ExtResource("8_w6pac")]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"step"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -41)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_frqpn"]
_data = {
"RESET": SubResource("Animation_t6u8x"),
"idle": SubResource("Animation_c6a8w"),
"walk_left": SubResource("Animation_7l2fg"),
"walk_right": SubResource("Animation_n33bk")
}

[sub_resource type="Gradient" id="Gradient_15yga"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hfj3x"]
gradient = SubResource("Gradient_15yga")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5s3w6"]
particle_flag_disable_z = true
spread = 34.45
gravity = Vector3(0, 0, 0)
initial_velocity_min = 177.04
initial_velocity_max = 282.3
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.8
color_ramp = SubResource("GradientTexture1D_hfj3x")

[sub_resource type="Gradient" id="Gradient_ythvx"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1dhf5"]
gradient = SubResource("Gradient_ythvx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_80cv7"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 175.96
initial_velocity_max = 252.52
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 0.5
scale_max = 0.8
color_ramp = SubResource("GradientTexture1D_1dhf5")

[sub_resource type="SpriteFrames" id="SpriteFrames_s600i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_5gmot")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8eynm")
}, {
"duration": 1.0,
"texture": ExtResource("5_ply88")
}, {
"duration": 1.0,
"texture": ExtResource("6_qhq2r")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_rdm0a")
}, {
"duration": 1.0,
"texture": ExtResource("8_w6pac")
}, {
"duration": 1.0,
"texture": ExtResource("9_ph67t")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0q86u"]
size = Vector2(100, 186)

[node name="player" type="RigidBody2D" groups=["Player"]]
collision_mask = 3
lock_rotation = true
script = ExtResource("1_1m1ro")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6, 9)
shape = SubResource("RectangleShape2D_7425s")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0.156863, 0.203922)
z_index = -3
position = Vector2(-4, 95)
scale = Vector2(0.17, 0.039)
texture = ExtResource("2_72tof")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_frqpn")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, -41)
scale = Vector2(0.32, 0.32)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Sprite2D"]
position = Vector2(0, 408)
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_5s3w6")
texture = ExtResource("9_l71w0")
lifetime = 0.5

[node name="GPUParticles2D2" type="GPUParticles2D" parent="Sprite2D"]
position = Vector2(0, 400)
emitting = false
amount = 2
process_material = SubResource("ParticleProcessMaterial_80cv7")
texture = ExtResource("9_l71w0")
lifetime = 0.5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(0, -43.283)
scale = Vector2(0.241935, 0.241935)
sprite_frames = SubResource("SpriteFrames_s600i")
animation = &"idle"

[node name="InteractZone" type="Area2D" parent="."]
position = Vector2(-7, 13)
collision_layer = 17
collision_mask = 17

[node name="InteractShape" type="CollisionShape2D" parent="InteractZone"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_0q86u")

[node name="actions" type="Label" parent="."]
offset_left = -296.0
offset_top = -232.0
offset_right = 288.0
offset_bottom = -184.0
theme = ExtResource("11_ksnql")
theme_override_colors/font_outline_color = Color(0.0546875, 0.183594, 0.1875, 1)
theme_override_constants/outline_size = 12
text = "trans rights C:"
horizontal_alignment = 1

[connection signal="area_entered" from="InteractZone" to="." method="_on_area_entered"]
[connection signal="area_exited" from="InteractZone" to="." method="_on_area_exited"]
